# gitx

./: .gitignore  Makefile  README.md  docker-compose.yml  gitx  gitx.ps1  gitx.py  index.html  install.ps1  install.sh
.github/workflows/: pypi-publish.yml  static.yml
.octopus/api_gateway/: deployment_process.ocl
.octopus/data_collector/: deployment_settings.ocl
cli/: Dockerfile  build.sh  config.json  pyproject.toml  run.sh
cli/gitx/: cli.py  clone.py  config.py  main.py
cli/gitx/helpers/: __init__.py  cli.py  git.py  update.py
cli/gitx/workspace/: __init__.py  commands.py  paths.py
ghpage/: Dockerfile  angular.json  docker-compose.yml  run.sh
ghpage/src/: index.html  styles.scss
ghpage/src/app/: app.html  app.scss  app.spec.ts  app.ts
ghpage/src/components/terminal/: terminal.component.html  terminal.component.scss  terminal.component.ts
githubpage/: README.md  docker-compose.yml  package-lock.json  package.json
githubpage/src/: index.html
githubpage/src/app/: app.html  app.ts
scripts/: clean.sh
setup/: install.ps1  install.sh
