[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitx"
version = "0.1.0"
description = "Git superset CLI with workspace support"
requires-python = ">=3.10"
authors = [
  { name = "Parisius" }
]

dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0"
]

[project.scripts]
gitx = "gitx.main:app"