[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitx-cli"
version = "0.3.0"
description = "Git superset CLI with workspace support"
requires-python = ">=3.10"
license = "MIT"

authors = [
  { name = "Parisius", email = "parisius@parisius.dev" }
]

dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0"
]

classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers"
]

[project.scripts]
gitx = "gitx.main:app"